# CPP3_calc_cpp

./: CMakeLists.txt  README.md
src/: Makefile  calc.html  s21_test.cc  test.cc
src/Controller/: Controller.cc  Controller.h
src/Model/: Makefile  Model.cc  Model.h  model_note.txt  s21_test.cc
src/View/: Calculator.pro  Makefile  creditwindow.cpp  creditwindow.h  creditwindow.ui  depositwindow.cpp  depositwindow.h  depositwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.txt
